--- a/docs/theme/sass/_theme_layout.sass
+++ b/docs/theme/sass/_theme_layout.sass
@@ -2069,7 +2069,7 @@ a.copybtn.o-tooltip--left
   top: 0.7em
 
   +media($desktop)
-    left: 1.5em
+    left: 0
 
   +media($tablet)
     right: 3.5em
