--- a/docs/theme/sass/_theme_rst.sass
+++ b/docs/theme/sass/_theme_rst.sass
@@ -64,10 +64,7 @@
   pre.literal-block, div[class^='highlight']
     overflow-x: auto
     // 1px hack otherwise border won't show. lame
-    margin: 35px 0 35px -76px
-
-    +media($desktop-wider)
-      margin: 35px 0 35px -76px
+    margin: 35px 0 35px -46px
 
     div[class^='highlight']
       padding: 0px
